@@ -2,7 +2,7 @@ Package: MODIS
 Type: Package
 Title: Acquisition and Processing of MODIS Products
 Version: 1.1.3
-Date: 2018-02-02
+Date: 2018-07-10
 URL: https://github.com/MatMatt/MODIS
 BugReports: https://github.com/MatMatt/MODIS/issues
 Authors@R: c(
